<resources>
    <string name="app_name">Composition</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="welcomeTitle">Состав числа</string>
    <string name="gamesRules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n \nПример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому, что 3 + 4 = 7
    </string>
    <string name="confirm">Понятно</string>
    <string name="levelTest">Тестовый</string>
    <string name="chooseLevel">Уровень сложности</string>
    <string name="easy">Легкий</string>
    <string name="normal">Нормальный</string>
    <string name="hard">Сложный</string>
    <string name="emoji_image">Emoji image</string>
    <string name="button_retry">Попробовать снова</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="required_score">Ваш счет: </string>
    <string name="score_answer">Необходимое количество правильных ответов: </string>
    <string name="require_percentage">Необходимый процентправильных ответов: </string>
    <string name="score_percentage">Процент правильных ответов: </string>
</resources>