<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="result"
            type="com.example.composition.domain.entity.GameResult"
            />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.screens.fragments.GameFinishedFragment">

        <ImageView
            android:id="@+id/emojiResult"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:resultEmoji="@{result.winner}"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/emoji_image" />

        <TextView
            android:id="@+id/tvRequiredAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:requiredAnswers="@{result.gameSettings.minCountOfRightAnswers}"
            app:layout_constraintBottom_toTopOf="@+id/tvScoreAnswer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_chainStyle="spread"
            tools:text="@string/score_answer"
            />

        <TextView
            android:id="@+id/tvScoreAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:scoreAnswer="@{result.countOfRightAnswers}"
            app:layout_constraintBottom_toTopOf="@+id/tvMinPercentage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRequiredAnswer"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/required_score"
            />

        <TextView
            android:id="@+id/tvMinPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:requiredAnswers="@{result.gameSettings.minPercentOfRightAnswers}"
            android:layout_marginBottom="191dp"
            app:layout_constraintBottom_toTopOf="@+id/tvScorePercentage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvScoreAnswer"
            tools:text="@string/require_percentage"
            />

        <TextView
            android:id="@+id/tvScorePercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:scorePercentage="@{result}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMinPercentage"
            tools:text="@string/score_percentage"
            />

        <Button
            android:id="@+id/btnRetry"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/button_retry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="253dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
